tests/neg/semantic_bitwise_non_integer.baa
// EXPECT: العمليات البتية تتطلب معاملات عددية صحيحة
صحيح الرئيسية() {
    نص س = "مرحبا".
    صحيح ن = س & ١.
    إرجع ن.
}
